@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2026-02-10T02:30:33Z",
-  "count_outdated" : 130,
-  "uniques_outdated" : 112,
+  "timestamp" : "2026-02-11T02:27:32Z",
+  "count_outdated" : 131,
+  "uniques_outdated" : 113,
   "count" : 134,
   "uniques" : 116,
   "clones" : [
-    {
-      "timestamp": "2026-01-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2026-01-27T00:00:00Z",
       "count": 0,
@@ -124,6 +115,15 @@
     },
     {
       "timestamp": "2026-02-08T00:00:00Z",
+      "count": 0,
+      "count_minmax": [ 0, 0 ],
+      "count_decinc": [ 0, 0 ],
+      "uniques": 0,
+      "uniques_minmax": [ 0, 0 ],
+      "uniques_decinc": [ 0, 0 ]
+    },
+    {
+      "timestamp": "2026-02-09T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
