@@ -1,12 +1,7 @@
 {
-  "count": 4,
-  "uniques": 4,
+  "count": 3,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2026-01-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2026-01-27T00:00:00Z",
       "count": 0,
@@ -69,6 +64,11 @@
     },
     {
       "timestamp": "2026-02-08T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-09T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
